--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "redux-saga": "^1.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
