--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
     "axios": "^0.21.1",
@@ -16,9 +17,9 @@
     "react-redux": "^7.2.9",
     "react-router-dom": "^5.3.4",
     "redux": "^4.2.1",
-    "styled-components": "^6.1.8",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.3.0"
+    "redux-saga": "^1.3.0",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
